# urllogpass_sorter

./: README.md  config.json  file_utils.py  info.txt  main.py  main_gui.py  pyproject.toml  requirements.txt  text_utils.py  urllogpass_sorter.py  utils.py
function/: check_cred.py  check_folder.py  check_line_reg.py  check_path.py  clear.py  file.py  file_utils.py  get_folder.py  json.py  read_file.py  split_ulp.py  text.py  text_utils.py  user_input.py  utils.py
modules/: GUI.py  Threads.py  config_cpu.py  cpu.py  file.py  json.py  json_module.py  logo.py  shemas.py  submodules.py  text.py
unittest/: text.py
